--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -10,7 +10,7 @@
 
   <div class="content">
     <div class="tasks-table">
-      <h2 class="table-title">Your Table Title Here</h2>
+      <h2 class="table-title">משימות</h2>
 
       <mat-table
         [dataSource]="matTableDataSource"
@@ -43,7 +43,7 @@
     </div>
     
     <div class="cards">
-      <h2 class="cards-title">Your Cards Section Title Here</h2>
+      <h2 class="cards-title">מצב קריאות</h2>
 
       <!-- Flatten out the structure to have all cards directly within .cards -->
       <!-- First row of cards -->
