--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -231,33 +231,41 @@
               <li>
                 <a
                   href="http://srv-apps-prod/app/#/employeesmanagedashboard"
-                  target="_blank" class="bold-link"
+                  target="_blank"
+                  class="bold-link"
                   >ONNLINE
                 </a>
               </li>
               <li>
                 <a
                   href="http://srv-sysaid/HelpDesk.jsp?helpdeskfrm&fromId=IncidentsList&showAll=1&historyPage=Y"
-                  target="_blank" class="bold-link"
+                  target="_blank"
+                  class="bold-link"
                   >sysaid
                 </a>
               </li>
               <li>
                 <a
                   href="http://srv-apps-04:8080/#/mgmt/modifysingleuser?reportId=6008"
-                  target="_blank" class="bold-link"
+                  target="_blank"
+                  class="bold-link"
                   >AD
                 </a>
               </li>
               <li>
-                <a href="http://localhost:4200/stazerim" target="_blank" class="bold-link">
+                <a
+                  href="http://localhost:4200/stazerim"
+                  target="_blank"
+                  class="bold-link"
+                >
                   הרשאות לסטאזרים</a
                 >
               </li>
               <li>
                 <a
                   href="https://innovation-tzmc.monday.com/boards/1335449086"
-                  target="_blank" class="bold-link"
+                  target="_blank"
+                  class="bold-link"
                 >
                   monday</a
                 >
@@ -265,7 +273,8 @@
               <li>
                 <a
                   href="http://srv-profile/App/Portal/ChangeOrgUnit/OpenRequest.aspx"
-                  target="_blank" class="bold-link"
+                  target="_blank"
+                  class="bold-link"
                 >
                   אקספנדיון - העברת מחלקה</a
                 >
@@ -273,7 +282,8 @@
               <li>
                 <a
                   href="http://srv-cp-inter:57772/csp/elad/EnsPortal.ProductionConfig.zen?PRODUCTION=Productions.Poria&$NAMESPACE=ELAD"
-                  target="_blank" class="bold-link"
+                  target="_blank"
+                  class="bold-link"
                 >
                   אנסמבל
                 </a>
@@ -288,143 +298,136 @@
 
   <mat-tab label="ניהול משימות">
     <div class="content" dir="ltr">
-    <div class="left-content">
-    <div class="tasks-table">
-      <h2 class="table-title">משימות</h2>
-        <!-- Add Task Button -->
-    <button mat-fab color="primary" class="add-task-btn" (click)="openAddTaskDialog()">
-      <mat-icon>add</mat-icon>
-    </button>
-      <mat-table
-        [dataSource]="todoListDataSource"
-        matSort
-        dir="rtl"
-        class="mat-elevation-z8"
-      >
-        <!-- Dynamically create each column based on the columns array -->
-        <ng-container *ngFor="let column of columns" [matColumnDef]="column">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>
-            {{ getColumnLabel(column) }}
-          </mat-header-cell>
-          <mat-cell *matCellDef="let element">
-            <ng-container [ngSwitch]="column">
-              <!-- Custom case for each column as needed -->
-              <ng-container *ngSwitchCase="'creationDate'">{{
-                element[column] | date : "dd/MM/yyyy HH:mm"
-              }}</ng-container>
-              <ng-container *ngSwitchCase="'dueDate'">{{
-                element[column] | date : "dd/MM/yyyy HH:mm"
-              }}</ng-container>
-              <ng-container *ngSwitchCase="'timeLeft'">
-                <span
-                  [class.bold-font]="
-                    isLessThan25Hours(element.dueDate, element.status)
-                  "
-                >
-                  {{ getTimeLeft(element.dueDate, element.status) }}
-                </span>
-              </ng-container>
-              <!-- Default display for other columns -->
-              <ng-container *ngSwitchDefault>{{
-                element[column]
-              }}</ng-container>
+      <div class="left-content">
+        <div class="tasks-table">
+          <h2 class="table-title">משימות</h2>
+          <!-- Add Task Button -->
+          <button
+            mat-fab
+            color="primary"
+            class="add-task-btn"
+            (click)="openAddTaskDialog()"
+          >
+            <mat-icon>add</mat-icon>
+          </button>
+          <mat-table
+            [dataSource]="todoListDataSource"
+            matSort
+            dir="rtl"
+            class="mat-elevation-z8"
+          >
+            <!-- Dynamically create each column based on the columns array -->
+            <ng-container
+              *ngFor="let column of columns"
+              [matColumnDef]="column"
+            >
+              <mat-header-cell *matHeaderCellDef mat-sort-header>
+                {{ getColumnLabel(column) }}
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element">
+                <ng-container [ngSwitch]="column">
+                  <!-- Custom case for each column as needed -->
+                  <ng-container *ngSwitchCase="'creationDate'">{{
+                    element[column] | date : "dd/MM/yyyy HH:mm"
+                  }}</ng-container>
+                  <ng-container *ngSwitchCase="'dueDate'">{{
+                    element[column] | date : "dd/MM/yyyy HH:mm"
+                  }}</ng-container>
+                  <ng-container *ngSwitchCase="'timeLeft'">
+                    <span
+                      [class.bold-font]="
+                        isLessThan25Hours(element.dueDate, element.status)
+                      "
+                    >
+                      {{ getTimeLeft(element.dueDate, element.status) }}
+                    </span>
+                  </ng-container>
+                  <!-- Default display for other columns -->
+                  <ng-container *ngSwitchDefault>{{
+                    element[column]
+                  }}</ng-container>
+                </ng-container>
+              </mat-cell>
             </ng-container>
-          </mat-cell>
-        </ng-container>
-        <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-        <mat-row
-          *matRowDef="let row; columns: columns"
-          [ngClass]="{
-            'priority-1': row.status === 'new',
-            'priority-3': row.status === 'In Progress',
-            'priority-2': row.status === 'Completed',
-            'bold-font': isLessThan25Hours(row.dueDate, row.status)
-          }"
-          class="mat-row"
-        ></mat-row>
-      </mat-table>
+            <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
+            <mat-row
+              *matRowDef="let row; columns: columns"
+              [ngClass]="{
+                'priority-1': row.status === 'new',
+                'priority-3': row.status === 'In Progress',
+                'priority-2': row.status === 'Completed',
+                'bold-font': isLessThan25Hours(row.dueDate, row.status)
+              }"
+              class="mat-row"
+            ></mat-row>
+          </mat-table>
 
-      <mat-paginator
-        #todoListPaginator="matPaginator"
-        [pageSizeOptions]="[ 10, 20,50]"
-      ></mat-paginator>
-    </div>
-  </div>
-    <div class="right-content">
-    <div class="cards">
-      <h2 class="cards-title">מצב משימות</h2>
-      <!-- First row of cards -->
-      <div class="card">
-        <div class="card-title">קריאות פתוחות</div>
-        <div
-          class="card-value"
-          [ngClass]="
-            userData.open_calls > 0 ? 'card-value-red' : 'card-value-blue'
-          "
-        >
-          {{ userData.open_calls }}
+          <mat-paginator
+            #todoListPaginator="matPaginator"
+            [pageSizeOptions]="[10, 20, 50]"
+          ></mat-paginator>
         </div>
       </div>
-      <div class="card">
-        <div class="card-title">המשך טיפול</div>
-        <div
-          class="card-value"
-          [ngClass]="{
-            'card-value-blue': userData.fallowUp_calls == '0',
-            'card-value-red': userData.fallowUp_calls != '0'
-          }"
-        >
-          {{ userData.followUp_calls }}
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-title">ממתין לתגובת המשתמש</div>
-        <div
-          class="card-value"
-          [ngClass]="{
-            'card-value-blue': userData.waiting_for_user_response == '0',
-            'card-value-red': userData.waiting_for_user_response != '0'
-          }"
-        >
-          {{ userData.waiting_for_user_response }}
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-title">בהמתנה</div>
-        <div
-          class="card-value"
-          [ngClass]="{
-            'card-value-blue': userData.on_hold == '0',
-            'card-value-red': userData.on_hold != '0'
-          }"
-        >
-          {{ userData.on_hold }}
-        </div>
-      </div>
+      <div class="right-content">
+        <div class="tasks-table">
+          <h2 class="table-title">משימות</h2>
+          <!-- Add Task Button -->
 
-      <div class="card">
-        <div class="card-title">קריאות סגורות- היום</div>
+          <mat-table
+            [dataSource]="TaskSummeryDataSource"
+            matSort
+            dir="rtl"
+            class="mat-elevation-z8"
+          >
+            <!-- Define columns -->
+            <ng-container matColumnDef="adUserName">
+              <mat-header-cell *matHeaderCellDef mat-sort-header
+                >שם משתמש
+              </mat-header-cell>
+              <mat-cell *matCellDef="let row">{{ row.adUserName }}</mat-cell>
+            </ng-container>
 
-        <div
-          class="card-value"
-          [ngClass]="{
-            'card-value-blue': userData.closed_today > 0,
-            'card-value-red': userData.closed_today <= 0
-          }"
-        >
-          {{ userData.closed_today }}
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-title">קריאות סגורות - החודש</div>
-        <div class="card-value [ngClass]= card-value-blue">
-          {{ userData.closed_this_month }}
+            <ng-container matColumnDef="new">
+              <mat-header-cell *matHeaderCellDef mat-sort-header
+                >חדש</mat-header-cell
+              >
+              <mat-cell *matCellDef="let row"   [ngClass]="
+              row.completed > 0 ? 'bold-font-red' : 'bold-font-blue'
+            ">{{ row.new }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="inProgress">
+              <mat-header-cell *matHeaderCellDef mat-sort-header
+                >בתהליך</mat-header-cell
+              >
+              <mat-cell *matCellDef="let row"   [ngClass]="
+              row.completed > 0 ? 'bold-font-red' : 'bold-font-blue'
+            ">{{ row.inProgress }}</mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="completed">
+              <mat-header-cell *matHeaderCellDef mat-sort-header
+                >הושלם</mat-header-cell
+              >
+              <mat-cell
+                *matCellDef="let row"
+                [ngClass]="
+                  row.completed > 0 ? 'bold-font-red' : 'bold-font-blue'
+                "
+              >
+                {{ row.completed }}</mat-cell
+              >
+            </ng-container>
+
+            <!-- Set up columns to display -->
+            <mat-header-row
+              *matHeaderRowDef="displayedColumns"
+            ></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+          </mat-table>
         </div>
       </div>
     </div>
-  </div>
-    </div>
-
   </mat-tab>
   <mat-tab label="ניהול הודעות"> Content 3 </mat-tab>
 </mat-tab-group>
